# shard

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: ingestion.rs
src/: buffer.rs  daemon.rs  ghost.rs  lib.rs  main.rs  reporter.rs  stitcher.rs  storage.rs  wal.rs
tests/: performance.rs
