[package]
name = "shard"
version = "0.1.0"
edition = "2021"
authors = ["Shard Authors"]
description = "High-performance Unix-native write-aggregator"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
arrow = "53"
parquet = "53"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memmap2 = "0.9"
libc = "0.2"
crossbeam-utils = "0.8"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
notify = "6.1"
walkdir = "2.5"
ctrlc = "3.4"
crc32fast = "1.3"

[target.'cfg(target_os = "linux")'.dependencies]
rio = "0.9"
inotify = "0.10"

[[bin]]
name = "shard"
path = "src/main.rs"